--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@refinedev/core": "^4.53.0",
     "antd": "^5.19.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
